[package]
name = "platform-serial"
version = "1.0.0"
edition = "2021"
description = "platform-serial is the generic trait of generic serial interface for embedded-nano-mesh crate"
authors = ["Yevhen Shevchenko (boshtannik) <boshtannik@gmail.com>"]
readmme = "README.md"
repository = "https://github.com/boshtannik/platform-serial"
license-file = "LICENSE"
keywords = ["embedded-nano-mesh", "platform", "serial", "usart", "no-std"]
categories = ["embedded", "no-std", "date-and-time"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.7"
nb = "1.1.0"
